fix: hide scrollbar in message space

--- a/src/components/messageSpace/messageSpace.css
+++ b/src/components/messageSpace/messageSpace.css
@@ -7,6 +7,7 @@
   overflow: auto;
   position: relative;
   scroll-behavior: smooth;
+  scrollbar-width: none;
 }
 
 .rustic-message-space .rustic-scroll-down-button {
